--- a/Portfolio/Home.html
+++ b/Portfolio/Home.html
@@ -4,23 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interactive 3D Portfolio</title>
+  <link rel="stylesheet" href="css/style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/controls/OrbitControls.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/loaders/GLTFLoader.js"></script>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
-    #viewer-container {
-      width: 100%;
-      height: 100vh;
-      background: #222; /* Black background for better contrast */
-    }
-  </style>
 </head>
 <body>
-  <div id="viewer-container"></div>
+  <header>
+    <h1>Interactive 3D Portfolio</h1>
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="home">
+      <h2>Welcome</h2>
+      <p>Explore my interactive 3D portfolio.</p>
+    </section>
+
+    <section id="projects">
+      <h2>3D Projects</h2>
+      <div id="viewer-container"></div>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Email: example@example.com</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 Interactive 3D Portfolio</p>
+  </footer>
+
   <script src="js/app.js"></script>
 </body>
 </html>
