--- a/index.html
+++ b/index.html
@@ -5,43 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interactive 3D Portfolio</title>
   <link rel="stylesheet" href="css/style.css">
+  <!-- Three.js Library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/controls/OrbitControls.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
+  <!-- Header -->
   <header>
-    <h1>Interactive 3D Portfolio</h1>
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+    <h1>My Interactive 3D Portfolio</h1>
   </header>
 
+  <!-- 3D Viewer Container -->
   <main>
-    <section id="home">
-      <h2>Welcome</h2>
-      <p>Explore my interactive 3D portfolio.</p>
-    </section>
-
-    <section id="projects">
-      <h2>3D Projects</h2>
-      <div id="viewer-container"></div>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Email: example@example.com</p>
-    </section>
+    <div id="viewer-container"></div>
   </main>
 
+  <!-- Footer -->
   <footer>
-    <p>&copy; 2024 Interactive 3D Portfolio</p>
+    <p>&copy; 2024 My Interactive Portfolio</p>
   </footer>
 
+  <!-- Custom JS -->
   <script src="js/app.js"></script>
 </body>
 </html>
