--- a/index.html
+++ b/index.html
@@ -4,29 +4,56 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interactive 3D Portfolio</title>
-  <link rel="stylesheet" href="css/style.css">
-  <!-- Three.js Library -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/controls/OrbitControls.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/examples/js/loaders/GLTFLoader.js"></script>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f0f0f0;
+    }
+
+    header {
+      background-color: #333;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+      font-size: 1.5rem;
+    }
+
+    .viewer-container {
+      width: 100%;
+      height: 90vh; /* Adjust height to fill the screen */
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #222;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: #333;
+      color: white;
+    }
+  </style>
+  <!-- Spline Viewer Module -->
+  <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.48/build/spline-viewer.js"></script>
 </head>
 <body>
   <!-- Header -->
   <header>
-    <h1>My Interactive 3D Portfolio</h1>
+    Interactive 3D Portfolio
   </header>
 
-  <!-- 3D Viewer Container -->
-  <main>
-    <div id="viewer-container"></div>
-  </main>
+  <!-- Spline Viewer Container -->
+  <div class="viewer-container">
+    <spline-viewer url="https://prod.spline.design/NUyUJoJXzGi8MOwB/scene.splinecode"></spline-viewer>
+  </div>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2024 My Interactive Portfolio</p>
+    &copy; 2024 My Interactive 3D Portfolio
   </footer>
-
-  <!-- Custom JS -->
-  <script src="js/app.js"></script>
 </body>
 </html>
