--- a/index.html
+++ b/index.html
@@ -3,57 +3,117 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive 3D Portfolio</title>
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
-    }
-
-    header {
-      background-color: #333;
-      color: white;
-      padding: 1rem;
-      text-align: center;
-      font-size: 1.5rem;
-    }
-
-    .viewer-container {
-      width: 100%;
-      height: 90vh; /* Adjust height to fill the screen */
-      margin: 0 auto;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: #222;
-    }
-
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background-color: #333;
-      color: white;
-    }
-  </style>
-  <!-- Spline Viewer Module -->
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="css/style.css">
   <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.48/build/spline-viewer.js"></script>
 </head>
 <body>
   <!-- Header -->
   <header>
-    Interactive 3D Portfolio
+    <h1>My Portfolio</h1>
+    <nav>
+      <ul>
+        <li><a href="#" onclick="showSection('projects')">Projects</a></li>
+        <li><a href="#" onclick="showSection('sports')">Sports</a></li>
+        <li><a href="#" onclick="showSection('other')">Other</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <!-- Spline Viewer Container -->
-  <div class="viewer-container">
-    <spline-viewer url="https://prod.spline.design/NUyUJoJXzGi8MOwB/scene.splinecode"></spline-viewer>
-  </div>
+  <!-- Main Content -->
+  <main>
+    <!-- Projects Section -->
+    <section id="projects" class="section active">
+      <h2>Projects</h2>
+      <div class="taskbar">
+        <button onclick="showSubsection('modeling')">3D Modeling</button>
+        <button onclick="showSubsection('visual')">Visual Design</button>
+      </div>
 
-  <!-- Footer -->
-  <footer>
-    &copy; 2024 My Interactive 3D Portfolio
-  </footer>
+      <!-- 3D Modeling -->
+      <div id="modeling" class="subsection active">
+        <h3>3D Modeling</h3>
+        <div class="viewer-grid">
+          <div class="viewer-card">
+            <h4>Watch Blowout</h4>
+            <spline-viewer url="https://prod.spline.design/o9G7CRrSLzUNWkUt/scene.splinecode"></spline-viewer>
+          </div>
+          <div class="viewer-card">
+            <h4>Nerf Gun</h4>
+            <spline-viewer url="https://prod.spline.design/m4d-PGtuzi35SI9H/scene.splinecode"></spline-viewer>
+          </div>
+          <div class="viewer-card">
+            <h4>Low Poly Sword</h4>
+            <spline-viewer url="https://prod.spline.design/fl941watZVL4BStq/scene.splinecode"></spline-viewer>
+            <img src="assets/sword final.png" alt="Reference Sword" class="reference-top">
+          </div>
+          <div class="viewer-card">
+            <h4>Aero Bars</h4>
+            <spline-viewer url="https://prod.spline.design/XPPKqkIeYbuYK8hz/scene.splinecode"></spline-viewer>
+          </div>
+        </div>
+      </div>
+
+      <!-- Visual Design -->
+      <div id="visual" class="subsection">
+        <h3>Visual Design</h3>
+        <div class="image-grid">
+          <div class="image-card">
+            <h4>Fantasy Map</h4>
+            <img src="assets/Fantasy Map 1.jpg" alt="Fantasy Map">
+          </div>
+          <div class="image-card">
+            <h4>Font Robot</h4>
+            <img src="assets/Font robot final (effects).jpg" alt="Font Robot">
+          </div>
+          <div class="image-card">
+            <h4>Top Down Map</h4>
+            <img src="assets/Top down map.jpg" alt="Top Down Map">
+          </div>
+          <div class="image-card">
+            <h4>Beast Coloring</h4>
+            <img src="assets/picture coloring 3.jpg" alt="Beast Coloring">
+          </div>
+          <div class="image-card">
+            <h4>Zelda Tribute</h4>
+            <img src="assets/Zelda 4.jpg" alt="Zelda Tribute">
+          </div>
+          <div class="image-card">
+            <h4>Animated Mario</h4>
+            <img src="assets/New Piskel (1).gif" alt="Animated Mario">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Sports Section -->
+    <section id="sports" class="section">
+      <h2>Sports</h2>
+      <p>Content for sports goes here.</p>
+    </section>
+
+    <!-- Other Section -->
+    <section id="other" class="section">
+      <h2>Other</h2>
+      <p>Miscellaneous content goes here.</p>
+    </section>
+  </main>
+
+  <!-- JavaScript -->
+  <script>
+    // Function to show main sections
+    function showSection(sectionId) {
+      const sections = document.querySelectorAll('.section');
+      sections.forEach((section) => section.classList.remove('active'));
+      document.getElementById(sectionId).classList.add('active');
+    }
+
+    // Function to show subsections within the Projects section
+    function showSubsection(subsectionId) {
+      const subsections = document.querySelectorAll('#projects .subsection');
+      subsections.forEach((subsection) => subsection.classList.remove('active'));
+      document.getElementById(subsectionId).classList.add('active');
+    }
+  </script>
 </body>
 </html>
