--- a/index.html
+++ b/index.html
@@ -13,17 +13,49 @@
     <h1>My Portfolio</h1>
     <nav>
       <ul>
+        <li><a href="#" onclick="showSection('home')">Home</a></li>
         <li><a href="#" onclick="showSection('projects')">Projects</a></li>
         <li><a href="#" onclick="showSection('sports')">Sports</a></li>
-        <li><a href="#" onclick="showSection('other')">Other</a></li>
       </ul>
     </nav>
   </header>
 
   <!-- Main Content -->
   <main>
+    <!-- Home Section -->
+    <section id="home" class="section active">
+      <div class="container-home">
+        <!-- Portrait Section -->
+        <div class="portrait">
+          <img src="assets/Me.jpg" alt="My Portrait">
+        </div>
+
+        <!-- Content Section -->
+        <div class="content-home">
+          <h2>About Me</h2>
+          <p>
+            Hello, I'm Justin St-Onge, a student currently attending Heritage Regional High School (HRHS) in secondary 5 within the iCan program.
+          </p>
+          <p>
+            Welcome to my personal portfolio! The following will showcase a little about who I am.
+          </p>
+          <p>
+            I am a dedicated sports enthusiast with a passion for volleyball, soccer, track and field, and biking, which have shaped my resilience, teamwork, and discipline. Equally, I have a deep fascination for robotics and innovative technology. My time in the iCan program has allowed me to explore and develop skills in 3D modeling and other exciting technological advancements, many of which are showcased here. Currently, I work as a lifeguard, looking ahead, I aspire to contribute to cutting-edge engineering developments and use my skills to drive innovation and create impactful solutions.
+          </p>
+          <p>
+            Take a look around, and don’t hesitate to reach out if you have any questions or would like to collaborate.
+          </p>
+          <h1>Contact Information</h1>
+          <p>
+            📧 Email: justinstonge@hotmail.com<br>
+            📞 Phone: 514-809-0803
+          </p>
+        </div>
+      </div>
+    </section>
+
     <!-- Projects Section -->
-    <section id="projects" class="section active">
+    <section id="projects" class="section">
       <h2>Projects</h2>
       <div class="taskbar">
         <button onclick="showSubsection('modeling')">3D Modeling</button>
@@ -91,29 +123,9 @@
       <h2>Sports</h2>
       <p>Content for sports goes here.</p>
     </section>
-
-    <!-- Other Section -->
-    <section id="other" class="section">
-      <h2>Other</h2>
-      <p>Miscellaneous content goes here.</p>
-    </section>
   </main>
 
   <!-- JavaScript -->
-  <script>
-    // Function to show main sections
-    function showSection(sectionId) {
-      const sections = document.querySelectorAll('.section');
-      sections.forEach((section) => section.classList.remove('active'));
-      document.getElementById(sectionId).classList.add('active');
-    }
-
-    // Function to show subsections within the Projects section
-    function showSubsection(subsectionId) {
-      const subsections = document.querySelectorAll('#projects .subsection');
-      subsections.forEach((subsection) => subsection.classList.remove('active'));
-      document.getElementById(subsectionId).classList.add('active');
-    }
-  </script>
+  <script src="js/app.js"></script>
 </body>
 </html>
